[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Tutorial/TutorialBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Tutorial/Tutorial.gd" type="Script" id=2]

[node name="Tutorial" type="Node"]
script = ExtResource( 2 )

[node name="TutorialBox" parent="." instance=ExtResource( 1 )]
margin_left = -444.0
margin_top = 200.0
margin_right = -444.0
margin_bottom = 200.0
rect_min_size = Vector2( 1080, 1080 )
rect_scale = Vector2( 0.5, 0.5 )

[node name="Timer1" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
